Overflow issues for pages

--- a/src/components/App/Layout.module.scss
+++ b/src/components/App/Layout.module.scss
@@ -17,6 +17,6 @@
 
 @media only screen and (max-width: 1023px) {
   .rhsContent {
-    height: calc(100vh - 57px);
+    height: calc(100vh - 134px);
   }
 }
